Name: cgi
Version: 3001.1.8.5
Copyright: Bjorn Bringert, Andy Gill, Anders Kaseorg, Ian Lynagh,
           Erik Meijer, Sven Panne, Jeremy Shaw
Category: Network
Maintainer: John Chee <cheecheeo@gmail.com>
Author: Bjorn Bringert
Homepage: https://github.com/cheecheeo/haskell-cgi
License: BSD3
License-file: LICENSE
Synopsis: A library for writing CGI programs
Description:
 This is a Haskell library for writing CGI programs.
Build-Type: Simple
Cabal-Version: >=1.6

source-repository head
  type: git
  location: git://github.com/cheecheeo/stats.git

Flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

Library
  Exposed-Modules:
    Network.CGI,
    Network.CGI.Monad,
    Network.CGI.Protocol,
    Network.CGI.Cookie,
    Network.CGI.Compat
  Other-modules:
    Network.CGI.Accept,
    Network.CGI.Multipart,
    Network.CGI.Header
  Extensions:
    CPP,
    MultiParamTypeClasses
  ghc-options: -Wall

  Build-depends:
    network >= 2.0,
    parsec >= 2.0,
    mtl==2.2.*,
    exceptions,
    xhtml >= 3000.0.0,
    bytestring,
    base >= 4.5 && < 5,
    old-time,
    old-locale,
    containers
  If flag(network-uri)
    Build-depends: network-uri >= 2.6
  Else
    Build-depends: network < 2.6

--Executable:     printinput
--Main-Is:        printinput.hs
--Hs-Source-Dir:  examples

--Executable:     redirect
--Main-Is:        redirect.hs
--Hs-Source-Dir:  examples

--Executable:     upload
--Main-Is:        upload.hs
--Hs-Source-Dir:  examples

