name:               cgi
version:            3001.3.0.3
synopsis:           A library for writing CGI programs
description:        This is a Haskell library for writing CGI programs.
license:            BSD3
license-file:       LICENSE
copyright:          Bjorn Bringert, John Chee, Andy Gill, Anders Kaseorg,
                    Ian Lynagh, Erik Meijer, Sven Panne, Jeremy Shaw, Peter Simons
author:             Bjorn Bringert
maintainer:         John Chee <cheecheeo@gmail.com>, Peter Simons <simons@cryp.to>
tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
category:           Network
homepage:           https://github.com/cheecheeo/haskell-cgi
bug-reports:        https://github.com/cheecheeo/haskell-cgi/issues
build-type:         Simple
extra-source-files: README.md
                    CHANGELOG.md
                    .hlint.yaml
cabal-version:      >= 1.8

source-repository head
  type:     git
  location: git://github.com/cheecheeo/haskell-cgi.git

flag install-examples
  default:     False
  description: compile (and install) the example programs

flag network-uri
  default:     True
  description: get Network.URI from the network-uri package

flag old-mtl
  default:     False
  description: use mtl-compat and mtl \< 2.2.0.1

library
  exposed-modules: Network.CGI
                   Network.CGI.Compat
                   Network.CGI.Cookie
                   Network.CGI.Monad
                   Network.CGI.Protocol
  other-modules:   Network.CGI.Accept
  hs-source-dirs:  src
  build-depends:   base       >= 4.5 && < 5
                 , bytestring < 0.11
                 , containers < 0.7
                 , exceptions == 0.10.*
                 , multipart  >= 0.1.2 && < 0.2
                 , parsec     >= 2.0 && < 3.2
                 , time       >= 1.5 && < 1.10
                 , xhtml      >= 3000.0.0 && < 3000.3
  extensions:      MultiParamTypeClasses
                   CPP
  ghc-options:     -Wall

  if flag(network-uri)
    build-depends: network >= 2.6 && < 2.9, network-uri == 2.6.*
  else
    build-depends: network < 2.6

  if flag(old-mtl)
    build-depends: mtl >= 2.1.3.1 && <= 2.2.0.1, mtl-compat >= 0.2.1.1 && < 0.3
  else
    build-depends: mtl > 2.2.0.1 && < 2.3

executable cookie.cgi
  main-is:        cookie.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, cgi, xhtml
  else
    buildable: False

executable error.cgi
  main-is:        error.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, cgi, xhtml
  else
    buildable: False

executable hello.cgi
  main-is:        hello.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, cgi, xhtml
  else
    buildable: False

executable printinput.cgi
  main-is:        printinput.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, cgi, xhtml
  else
    buildable: False

executable redirect.cgi
  main-is:        redirect.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, cgi, xhtml
  else
    buildable: False

executable showAllInputs.cgi
  main-is:        showAllInputs.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, cgi, xhtml
  else
    buildable: False

executable upload.cgi
  main-is:        upload.hs
  hs-source-dirs: examples

  if flag(install-examples)
    build-depends: base, bytestring, cgi, xhtml
  else
    buildable: False
